--- a/FOX Youtube API Sentiment.ipynb
+++ b/FOX Youtube API Sentiment.ipynb
@@ -8,18 +8,11 @@
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import io\n",
+    "from apiclient.discovery import build\n",
+    "\n",
     "api_key = \"xxxxxxxxxxxxxxxxxxxxxxxxxxxx\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from apiclient.discovery import build"
    ]
   },
   {
@@ -48,15 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -65,15 +49,6 @@
     "res = youtube.playlistItems().list(playlistId = 'UUXIJgqnII2ZOINSWNOGFThA',\n",
     "                                   part='snippet',\n",
     "                                  maxResults=50).execute()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res "
    ]
   },
   {
@@ -136,32 +111,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(videos)\n",
-    "videos[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for video in videos:\n",
     "    print(video['snippet']['title'])\n",
     "    print(video['snippet']['publishedAt'])\n",
     "   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import io"
    ]
   },
   {
